--- a/portfolio.html
+++ b/portfolio.html
@@ -295,7 +295,7 @@
     <footer class="footer">
       <div class="container footer-container">  
          <div class=" footer-adress">  
-       <a href="" class="footer-logo">
+       <a href="" class="logo logo-footer">
          <span class="accent">Web</span>Studio</a>
        <address class="site-adress">
          <ul class="site-adress__list list">
