--- a/portfolio.html
+++ b/portfolio.html
@@ -23,7 +23,7 @@
         <nav class="site-nav">
           <a href="" class="logo"> <span class="accent">Web</span>Studio</a>
           <ul class="site-nav__list">
-            <li class="site-nav__item"><a href="/index.html" class="site-nav__link">Студія</a></li>
+            <li class="site-nav__item"><a href="./index.html" class="site-nav__link">Студія</a></li>
             <li class="site-nav__item">
               <a href="./portfolio.html" class="site-nav__link__current">Порфоліо</a>
             </li>
